--- a/frontend/src/styles/LoadingPage.css
+++ b/frontend/src/styles/LoadingPage.css
@@ -1,9 +1,10 @@
 #loading-wrapper {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     left: 0;
     top: 0;
+    z-index: 1000;
 }
 
 #loading-text {
