Update state details and images, add footer, update CSS for custom cursor, and fix typos.

--- a/frontend/src/components/BacksideComponent/customCursor.css
+++ b/frontend/src/components/BacksideComponent/customCursor.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 * {
-  cursor: none;
+  /* cursor: none; */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
